
syntax = "proto3";
package pb;
option  go_package = "../../common/pb";
import "enum.gen.proto";


// 路由配置表
message RouteConfig {
	uint32 ID = 1; // 唯一ID
	string Request = 2; // 请求名称
	string Response = 3; // 应答协议
	string FuncName = 4; // 函数名称
	SERVER ServerType = 5; // 服务类型
	ROUTE RouteType = 6; // 路由类型
}

message RouteConfigAry {
	repeated RouteConfig Ary = 1;
}